test/datalog_tests/constr.fail.ast.expected
Failed to parse input file: "./test/datalog_tests/constr.fail.dl" (line 2, column 23):
unexpected '{'
expecting "typedef", "ground", "relation", "function", identifier, "for" or end of inputerror: "./test/datalog_tests/constr.fail.dl:4:13-4:26: Multiple definitions of constructor C at the following locations:\n  ./test/datalog_tests/constr.fail.dl:4:13-4:26\n  ./test/datalog_tests/constr.fail.dl:5:13-7:1"Failed to parse input file: "./test/datalog_tests/constr.fail.dl" (line 4, column 9):
unexpected "("
expecting end of "function" or identifierFailed to parse input file: "./test/datalog_tests/constr.fail.dl" (line 4, column 34):
unexpected "{"
expecting "<", "," or "}"Failed to parse input file: "./test/datalog_tests/constr.fail.dl" (line 4, column 10):
unexpected "F"
expecting identifiererror: "./test/datalog_tests/constr.fail.dl:4:15-8:1: Field x is declared with different types"