test/datalog_tests/constr.fail.dl
// constructor names have to uppercase
typedef t = lowercase { field: int }

//---

// constructor names have to be unique
typedef t = C { f: int } |
            C { f: string }

//---

// Union types must be specified by name
function(x : Constructor{}): int

//---

// nested constructors must use names
typedef t19 = Const { f0: Const1 { f2: int } }

//---

// function names have to be lowercase
function F(): int

//---

// Constructor argument types must be unambiguous
typedef Alt = C0{x: bit<16>}
            | C1{x: bit<32>}


